feat: add update and delete feature in user module
